--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -9,7 +9,8 @@
     <!--<script src="//cdn.bootcss.com/vue/2.5.2/vue.js"></script>
      <script src="//cdn.bootcss.com/vue-router/2.3.0/vue-router.min.js"></script>
     <script src="//cdn.bootcss.com/vuex/2.2.1/vuex.min.js"></script>
-    <script src="//cdn.bootcss.com/axios/0.15.3/axios.min.js"></script>-->
+    <script src="//cdn.bootcss.com/axios/0.15.3/axios.min.js"></script>
+    <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
