--- a/src/pages/back/back.html
+++ b/src/pages/back/back.html
@@ -3,9 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>back</title>
+    <title>title</title>
+    <link rel="stylesheet" href="//cdn.bootcss.com/element-ui/2.4.5/theme-chalk/index.css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/addon/merge/merge.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/theme/monokai.min.css" rel="stylesheet">
   </head>
   <body>
+    <script src="//cdn.bootcss.com/vue/2.5.2/vue.js"></script>
+    <script src="//cdn.bootcss.com/vuex/2.2.1/vuex.min.js"></script>
+    <script src="//cdn.bootcss.com/axios/0.15.3/axios.min.js"></script>
+    <!-- <script src="//cdn.bootcss.com/vue-router/3.1.3/vue-router.min.js"></script> -->
+    <script src="//cdn.bootcss.com/element-ui/2.4.5/index.js"></script>
+    <script src="//cdn.bootcss.com/marked/0.7.0/marked.min.js"></script>
+    <script src="//cdn.bootcss.com/svg.js/3.0.13/svg.min.js"></script>
+
+    <!---code mirror开始-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/vue-codemirror@4.0.0/dist/vue-codemirror.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/mode/javascript/javascript.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/addon/merge/merge.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/addon/selection/active-line.min.js"></script>
+    <!-- Google diff match patch -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
+    <script>
+    window.DIFF_DELETE = -1
+    window.DIFF_INSERT = 1
+    window.DIFF_EQUAL = 0
+    </script>
+    <!--code mirror结束-->
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
