--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -4,13 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>blog</title>
+    <link rel="stylesheet" href="//cdn.bootcss.com/element-ui/2.4.5/theme-chalk/index.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/mapbox-gl/0.48.0/mapbox-gl.css">
+    <!-- 编辑样式 -->
+    <link href="//cdn.bootcss.com/quill/1.0.0/quill.core.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/quill/1.0.0/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/quill/1.0.0/quill.bubble.min.css" rel="stylesheet">
   </head>
   <body>
-    <!--<script src="//cdn.bootcss.com/vue/2.5.2/vue.js"></script>
-     <script src="//cdn.bootcss.com/vue-router/2.3.0/vue-router.min.js"></script>
+    <script src="//cdn.bootcss.com/vue/2.5.2/vue.js"></script>
     <script src="//cdn.bootcss.com/vuex/2.2.1/vuex.min.js"></script>
     <script src="//cdn.bootcss.com/axios/0.15.3/axios.min.js"></script>
-    <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>-->
+    <script src="//cdn.bootcss.com/mapbox-gl/0.48.0/mapbox-gl.js"></script>
+    <script src="//cdn.bootcss.com/element-ui/2.4.5/index.js"></script>
+    <script src="//cdn.bootcss.com/marked/0.7.0/marked.min.js"></script>
+    <!-- 编辑器 -->
+    <script src="//cdn.bootcss.com/quill/1.0.0/quill.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/vue-quill-editor@3.0.4/dist/vue-quill-editor.js"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
